# chassis

./: CMakeLists.txt  package.xml
can/include/: can.h
can/src/: can.cpp
can_protocol/: can_protocol.h
common/config_manager/include/: config_manager.h
common/config_manager/src/: config_manager.cpp
communication/include/: communication_base.h  rosbridge.h
communication/src/: main.cpp  rosbridge.cpp
conf/: chassisParameter.yaml
datapool/: datapool.h
launch/: chassis.launch
socket_can/include/: socket_can_transmitter.h
socket_can/src/: socket_can_transmitter.cpp
